--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="sign_up">Sign up</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="skills">Skills</string>
+    <string name="short_bio">Short Bio</string>
+    <string name="register">REGISTER</string>
+    <string name="prof_pic">Profile Picture</string>
+    <string name="profile_pic_description">Profile Picture</string>
 
     <string-array name="gender_array">
         <item>Male</item>
